--- a/package.json
+++ b/package.json
@@ -5,29 +5,12 @@
     },
     "name": "pg-format",
     "license": "MIT",
-    "homepage": "https://github.com/datalanche/node-pg-format",
-    "description": "Node.js implementation of PostgreSQL's format() to safely create dynamic SQL queries.",
-    "version": "1.0.4",
+    "homepage": "https://github.com/grantcarthew/deno-pg-format",
+    "description": "A deno implementation of PostgreSQL's format() to safely create dynamic SQL queries.",
+    "version": "1.0.0",
     "repository": {
         "type": "git",
-        "url": "https://github.com/datalanche/node-pg-format.git"
+        "url": "https://github.com/grantcarthew/deno-pg-format.git"
     },
-    "main": "lib/index.js",
-    "directories": {
-        "lib": "./lib"
-    },
-    "engines": {
-        "node": ">=4.0"
-    },
-    "dependencies": {
-    },
-    "devDependencies": {
-        "istanbul": "0.4.2",
-        "mocha": "2.4.5",
-        "should": "8.2.1"
-    },
-    "scripts": {
-        "test": "node ./node_modules/mocha/bin/mocha",
-        "cover-test": "node_modules/.bin/istanbul cover node_modules/.bin/_mocha"
-    }
+    "main": "lib/index.js"
 }
